2003-06-08  Bastien Nocera  <hadess@hadess.net>

	* src/video-utils.c: FreeBSD compile fix (patch by Hendrik Scholz
	<hscholz@raisdorf.net>)

2003-06-05  Julien MOUTTE <julien@moutte.net>

	* src/totem.c: (totem_action_fullscreen_toggle), (show_controls),
	(on_show_controls1_activate): Fixing the show controls menu item in
	the righ click menu. It was not handled correctly with fullscreen.

2003-06-05  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_open):
	fix compilation

2003-06-03  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* configure.in: added a curl-dev dependency
	* data/Makefile.am: upd
	* data/totem-download.glade: added
	* src/Makefile.am: upd
	* src/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_open), (bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata): fixed a bunch of warnings, save the
	fourcc's of the video and audio after closing them
	* src/bacon-video-widget.h: added fourcc fields to the metadata
	* src/totem-download.[ch]: added
	* src/totem.c: (totem_action_error),
	(totem_action_error_try_download), (totem_action_set_mrl),
	(on_error_event), (on_buffering_event): added a automatic downloader
	for the DLLs on x86 machines

2003-05-31  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (shrink_toplevel),
	(update_vis_xid), (update_xid), (got_error),
	(bacon_video_widget_set_scale_ratio), (bacon_video_widget_new): Error
	handling. It works with GStreamer's HEAD. Will be in 0.6.2. Fixing
	scale ratio and auto resize stuff with a shrink method of toplevel
	* src/gstvideowidget.h: Fixed tabs

2003-05-29  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-05-28  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event_message): fyx a tippo
	(Closes: #113915)

2003-05-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_mrl_to_title):