@@ -1,3 +1,12 @@
+2003-06-09  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-xine.c:
+	(bacon_video_widget_get_metadata_int),
+	(bacon_video_widget_get_metadata): check for a null GValue
+	* src/totem-video-thumbnailer.c: (main): add a FIXME
+	* src/totem.c: (totem_action_error_try_download): initialise the GValue
+	properly before using it, fixes a segfault
+
 2003-06-08  Bastien Nocera  <hadess@hadess.net>
 
 	* src/video-utils.c: FreeBSD compile fix (patch by Hendrik Scholz
